[gd_scene load_steps=2 format=2]

[ext_resource path="res://FleaOrder.gd" type="Script" id=1]

[node name="FleaOrder" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SexLabel" type="Label" parent="."]
margin_top = 416.0
margin_right = 100.0
margin_bottom = 430.0
size_flags_horizontal = 3

[node name="SizeLabel" type="Label" parent="."]
margin_left = 104.0
margin_top = 416.0
margin_right = 204.0
margin_bottom = 430.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObedienceLabel" type="Label" parent="."]
margin_left = 208.0
margin_top = 416.0
margin_right = 308.0
margin_bottom = 430.0
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 846.0
size_flags_horizontal = 3
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
